pocketql-grammars/src/generated/java/com/pocketmath/pocketql/grammars/transformer/PocketQLAllParser.java
// Generated from /Users/etucker/IdeaProjects/stasov4/pocketql-grammars/src/main/resources/PocketQLAll.g4 by ANTLR 4.5
package com.pocketmath.pocketql.grammars.transformer;

import com.pocketmath.stasov.util.StasovStrings;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PocketQLAllParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, AND=4, OR=5, NOT=6, IN=7, W=8, ALPHANUM=9;
	public static final int
		RULE_start = 0, RULE_expr = 1, RULE_terminal_leaf = 2, RULE_eq = 3;
	public static final String[] ruleNames = {
		"start", "expr", "terminal_leaf", "eq"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "AND", "OR", "NOT", "IN", "W", "ALPHANUM"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PocketQLAll.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	public StringBuilder psb = new StringBuilder();
	public boolean changed = false;

	// convenience method
	private final static String conjoin(final String s1, final String s2, final String conjunction) {
	    return StasovStrings.conjoin(s1,s2,conjunction);
	}

	//
	// ALL-IMPORTANT :) METHODS FOR LOGGING / DEBUGGING
	//
	// TODO: Integrate with logging framework.
	//
	// Logging here is assumed to be fairly in depth or entirely off.  Logging of the parser
	// is considered low level in the overall perspective of the application.

	// (Intentionally short name.)
	/**
	 * Are we logging?
	 */
	protected boolean l() { return true; /* TODO: Set by configuration. */ }

	/**
	 * Log by rule with a message.
	 */
	protected void log(final String ruleName, final String msg) { System.out.println("[" + ruleName + "]: " + msg); }

	/**
	 * Log only that we're in the specified rule.
	 */
	protected void log(final String ruleName) { log(ruleName,""); }

	public PocketQLAllParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public String value;
		public ExprContext e;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLAllListener ) ((PocketQLAllListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLAllListener ) ((PocketQLAllListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketQLAllVisitor ) return ((PocketQLAllVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(8); 
			((StartContext)_localctx).e = expr(0);
			}
			 ((StartContext)_localctx).value = ((StartContext)_localctx).e.value; changed=true; if (l()) log("start" + ((StartContext)_localctx).e.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public String value;
		public ExprContext e1;
		public ExprContext e2;
		public ExprContext e3;
		public EqContext e;
		public ExprContext ne;
		public ExprContext ex;
		public List<TerminalNode> OR() { return getTokens(PocketQLAllParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(PocketQLAllParser.OR, i);
		}
		public List<TerminalNode> AND() { return getTokens(PocketQLAllParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(PocketQLAllParser.AND, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> W() { return getTokens(PocketQLAllParser.W); }
		public TerminalNode W(int i) {
			return getToken(PocketQLAllParser.W, i);
		}
		public EqContext eq() {
			return getRuleContext(EqContext.class,0);
		}
		public List<TerminalNode> NOT() { return getTokens(PocketQLAllParser.NOT); }
		public TerminalNode NOT(int i) {
			return getToken(PocketQLAllParser.NOT, i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLAllListener ) ((PocketQLAllListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLAllListener ) ((PocketQLAllListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketQLAllVisitor ) return ((PocketQLAllVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(12); 
				match(T__0);
				setState(16);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==W) {
					{
					{
					setState(13); 
					match(W);
					}
					}
					setState(18);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(19); 
				((ExprContext)_localctx).e1 = expr(0);
				setState(23);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==W) {
					{
					{
					setState(20); 
					match(W);
					}
					}
					setState(25);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(26); 
				match(OR);
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==W) {
					{
					{
					setState(27); 
					match(W);
					}
					}
					setState(32);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(33); 
				((ExprContext)_localctx).e2 = expr(0);
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==W) {
					{
					{
					setState(34); 
					match(W);
					}
					}
					setState(39);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(40); 
				match(T__1);
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==W) {
					{
					{
					setState(41); 
					match(W);
					}
					}
					setState(46);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(47); 
				match(AND);
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==W) {
					{
					{
					setState(48); 
					match(W);
					}
					}
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(54); 
				((ExprContext)_localctx).e3 = expr(2);

				            String c1 = conjoin(((ExprContext)_localctx).e1.value, ((ExprContext)_localctx).e3.value, " AND ");
				            String c2 = conjoin(((ExprContext)_localctx).e2.value, ((ExprContext)_localctx).e3.value, " AND ");
				            ((ExprContext)_localctx).value =  conjoin(c1, c2, " OR ");
				            if (l()) log("expr", "( e1=expr OR e2=expr ) AND e3=expr");
				        
				}
				break;
			case ALPHANUM:
				{
				{
				setState(57); 
				((ExprContext)_localctx).e = eq();
				}
				 ((ExprContext)_localctx).value = ((ExprContext)_localctx).e.value; 
				}
				break;
			case NOT:
				{
				{
				setState(60); 
				match(NOT);
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(61); 
					match(W);
					}
					}
					setState(64); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==W );
				setState(66); 
				match(NOT);
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(67); 
					match(W);
					}
					}
					setState(70); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==W );
				setState(72); 
				((ExprContext)_localctx).ne = expr(0);
				}

				            ((ExprContext)_localctx).value =  ((ExprContext)_localctx).ne.value;
				            if (l()) log("expr", "double negation elimination");
				        
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(256);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,32,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExprContext(_parentctx, _parentState);
					_localctx.e1 = _prevctx;
					_localctx.e1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_expr);
					setState(78);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==W) {
						{
						{
						setState(79); 
						match(W);
						}
						}
						setState(84);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(85); 
					match(AND);
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==W) {
						{
						{
						setState(86); 
						match(W);
						}
						}
						setState(91);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(92); 
					match(T__0);
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==W) {
						{
						{
						setState(93); 
						match(W);
						}
						}
						setState(98);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(99); 
					((ExprContext)_localctx).e2 = expr(0);
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==W) {
						{
						{
						setState(100); 
						match(W);
						}
						}
						setState(105);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(106); 
					match(OR);
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==W) {
						{
						{
						setState(107); 
						match(W);
						}
						}
						setState(112);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(113); 
					((ExprContext)_localctx).e3 = expr(0);
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==W) {
						{
						{
						setState(114); 
						match(W);
						}
						}
						setState(119);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(120); 
					match(T__1);

					                      String c1 = conjoin(((ExprContext)_localctx).e1.value, ((ExprContext)_localctx).e2.value, " AND ");
					                      String c2 = conjoin(((ExprContext)_localctx).e1.value, ((ExprContext)_localctx).e3.value, " AND ");
					                      ((ExprContext)_localctx).value =  conjoin(c1, c2, " OR ");
					                      if (l()) log("expr", "e1=expr AND ( e2=expr OR e3=expr )");
					                  
					setState(252);
					switch ( getInterpreter().adaptivePredict(_input,31,_ctx) ) {
					case 1:
						{
						}
						break;
					case 2:
						{
						setState(123); 
						match(T__0);
						setState(124); 
						((ExprContext)_localctx).e1 = expr(0);
						setState(128);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(125); 
							match(W);
							}
							}
							setState(130);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(131); 
						match(T__1);
						setState(135);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(132); 
							match(W);
							}
							}
							setState(137);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(138); 
						match(AND);
						setState(142);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(139); 
							match(W);
							}
							}
							setState(144);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(145); 
						match(T__0);
						setState(149);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(146); 
							match(W);
							}
							}
							setState(151);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(152); 
						((ExprContext)_localctx).e2 = expr(0);
						setState(156);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(153); 
							match(W);
							}
							}
							setState(158);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(159); 
						match(T__1);

						                          ((ExprContext)_localctx).value =  '(' + ((ExprContext)_localctx).e1.value + ") AND (" + ((ExprContext)_localctx).e2.value + ')';
						                          if (l()) log("expr", "AND");
						                      
						}
						break;
					case 3:
						{
						setState(162); 
						((ExprContext)_localctx).e1 = expr(0);
						setState(166);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(163); 
							match(W);
							}
							}
							setState(168);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(169); 
						match(AND);
						setState(173);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(170); 
							match(W);
							}
							}
							setState(175);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(176); 
						((ExprContext)_localctx).e2 = expr(0);

						                          ((ExprContext)_localctx).value =  ((ExprContext)_localctx).e1.value + " AND " + ((ExprContext)_localctx).e2.value;
						                          if (l()) log("expr", "AND");
						                      
						}
						break;
					case 4:
						{
						setState(179); 
						match(T__0);
						setState(180); 
						((ExprContext)_localctx).e1 = expr(0);
						setState(184);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(181); 
							match(W);
							}
							}
							setState(186);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(187); 
						match(T__1);
						setState(191);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(188); 
							match(W);
							}
							}
							setState(193);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(194); 
						match(OR);
						setState(198);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(195); 
							match(W);
							}
							}
							setState(200);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(201); 
						match(T__0);
						setState(205);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(202); 
							match(W);
							}
							}
							setState(207);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(208); 
						((ExprContext)_localctx).e2 = expr(0);
						setState(212);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(209); 
							match(W);
							}
							}
							setState(214);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(215); 
						match(T__1);

						                          ((ExprContext)_localctx).value =  '(' + ((ExprContext)_localctx).e1.value + ") OR (" + ((ExprContext)_localctx).e2.value + ')';
						                          if (l()) log("expr", "OR");
						                      
						}
						break;
					case 5:
						{
						setState(218); 
						((ExprContext)_localctx).e1 = expr(0);
						setState(222);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(219); 
							match(W);
							}
							}
							setState(224);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(225); 
						match(OR);
						setState(229);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(226); 
							match(W);
							}
							}
							setState(231);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(232); 
						((ExprContext)_localctx).e2 = expr(0);

						                          ((ExprContext)_localctx).value = ((ExprContext)_localctx).e1.value + " OR " + ((ExprContext)_localctx).e2.value;
						                          if (l()) log("expr", "OR");
						                      
						}
						break;
					case 6:
						{
						setState(235); 
						match(T__0);
						setState(239);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(236); 
							match(W);
							}
							}
							setState(241);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(242); 
						((ExprContext)_localctx).ex = expr(0);
						setState(246);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==W) {
							{
							{
							setState(243); 
							match(W);
							}
							}
							setState(248);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(249); 
						match(T__1);

						                          ((ExprContext)_localctx).value = '(' + ((ExprContext)_localctx).ex.value + ')';
						                          if (l()) log("expr", "parens");
						                      
						}
						break;
					}
					}
					} 
				}
				setState(258);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,32,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Terminal_leafContext extends ParserRuleContext {
		public String value;
		public EqContext e;
		public TerminalNode NOT() { return getToken(PocketQLAllParser.NOT, 0); }
		public EqContext eq() {
			return getRuleContext(EqContext.class,0);
		}
		public List<TerminalNode> W() { return getTokens(PocketQLAllParser.W); }
		public TerminalNode W(int i) {
			return getToken(PocketQLAllParser.W, i);
		}
		public Terminal_leafContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminal_leaf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLAllListener ) ((PocketQLAllListener)listener).enterTerminal_leaf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLAllListener ) ((PocketQLAllListener)listener).exitTerminal_leaf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketQLAllVisitor ) return ((PocketQLAllVisitor<? extends T>)visitor).visitTerminal_leaf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Terminal_leafContext terminal_leaf() throws RecognitionException {
		Terminal_leafContext _localctx = new Terminal_leafContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_terminal_leaf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(271);
			switch (_input.LA(1)) {
			case ALPHANUM:
				{
				setState(259); 
				((Terminal_leafContext)_localctx).e = eq();

				        ((Terminal_leafContext)_localctx).value =  ((Terminal_leafContext)_localctx).e.value;
				    
				}
				break;
			case NOT:
				{
				setState(262); 
				match(NOT);
				setState(264); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(263); 
					match(W);
					}
					}
					setState(266); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==W );
				setState(268); 
				((Terminal_leafContext)_localctx).e = eq();

				        ((Terminal_leafContext)_localctx).value =  "NOT " + ((Terminal_leafContext)_localctx).e.value;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			         System.out.println("VALUE: " + _localctx.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqContext extends ParserRuleContext {
		public String value;
		public Token a;
		public Token b;
		public List<TerminalNode> ALPHANUM() { return getTokens(PocketQLAllParser.ALPHANUM); }
		public TerminalNode ALPHANUM(int i) {
			return getToken(PocketQLAllParser.ALPHANUM, i);
		}
		public List<TerminalNode> W() { return getTokens(PocketQLAllParser.W); }
		public TerminalNode W(int i) {
			return getToken(PocketQLAllParser.W, i);
		}
		public EqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLAllListener ) ((PocketQLAllListener)listener).enterEq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketQLAllListener ) ((PocketQLAllListener)listener).exitEq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketQLAllVisitor ) return ((PocketQLAllVisitor<? extends T>)visitor).visitEq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqContext eq() throws RecognitionException {
		EqContext _localctx = new EqContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_eq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(275); 
			((EqContext)_localctx).a = match(ALPHANUM);
			setState(279);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==W) {
				{
				{
				setState(276); 
				match(W);
				}
				}
				setState(281);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(282); 
			match(T__2);
			setState(286);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==W) {
				{
				{
				setState(283); 
				match(W);
				}
				}
				setState(288);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(289); 
			((EqContext)_localctx).b = match(ALPHANUM);
			}
			 ((EqContext)_localctx).value =  ((EqContext)_localctx).a.getText() + "=" + ((EqContext)_localctx).b.getText(); if (l()) log("eq", "value=" + _localctx.value); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 1: 
			return expr_sempred((ExprContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean expr_sempred(ExprContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: 
			return precpred(_ctx, 1);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}